--- a/src/doors/clans-src/src/.gitignore
+++ b/src/doors/clans-src/src/.gitignore
@@ -1,2 +1,30 @@
 *.o
-*.*.*
+Clans-*-*-*.zip
+chew
+clans
+config
+ecomp
+install
+langcomp
+makenpc
+makepak
+mclass
+mcomp
+mitems
+mspells
+pcedit
+reset
+chew.exe
+clans.exe
+config.exe
+ecomp.exe
+install.exe
+langcomp.exe
+makenpc.exe
+makepak.exe
+mclass.exe
+mcomp.exe
+mitems.exe
+mspells.exe
+pcedit.exe
+reset.exe
