--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -31,6 +31,12 @@ else
 endif
 os	:=	$(shell echo $(OS)| tr "[A-Z ]" "[a-z_]")
 
+ifeq ($(OS),$(shell uname))
+ ifeq ($(MACH),$(shell uname -m | tr "[A-Z ]" "[a-z_]"))
+  NATIVE	:= 1
+ endif
+endif
+
 ifeq ($(os),netbsd)
 CFLAGS	+=	-D__unix__
 endif
@@ -55,9 +61,10 @@ CFLAGS	+=	-g
 endif
 # CFLAGS = -O -Wall
 DELETE = rm -f
-EXEFILE := .${os}.${MACH}
+DELETEDIR = rm -rf
+EXEFILE :=
 ifdef WIN
- EXEFILE := .${os}.${MACH}.exe
+ EXEFILE :=	.exe
  LIBS	+=	-lws2_32 -lgdi32 -lcomctl32
 endif
 
@@ -84,20 +91,42 @@ ifdef WIN
 endif
 
 DATA_DIR	?=	../data
+DOOR_BINARIES	:=	clans$(EXEFILE) config$(EXEFILE) pcedit$(EXEFILE) reset$(EXEFILE)
+DEVKIT_BINARIES	:=	chew$(EXEFILE) ecomp$(EXEFILE) install$(EXEFILE) \
+			langcomp$(EXEFILE) makenpc$(EXEFILE) makepak$(EXEFILE) \
+			mcomp$(EXEFILE) mclass$(EXEFILE) mitems$(EXEFILE) \
+			mspells$(EXEFILE)
+
+ifdef NATIVE
+NATIVEEXEFILE	:=	$(EXEFILE)
+else
+NATIVEEXEFILE	:=	$(shell env - PATH="$(PATH)" $(MAKE) NATIVE=1 native-exefile$(NATIVEEXEFILE) | awk '/^NATIVE EXEFILE: / {print $$3}')
+endif
 
 #all: clans.exe reset.exe pcedit.exe langcomp.exe mcomp.exe
-all: clans$(EXEFILE) config$(EXEFILE) pcedit$(EXEFILE) reset$(EXEFILE)
+all: $(DOOR_BINARIES)
 
 .PHONY: devkit
-devkit: chew$(EXEFILE) ecomp$(EXEFILE) install$(EXEFILE) \
-	langcomp$(EXEFILE) makenpc$(EXEFILE) makepak$(EXEFILE) \
-	mcomp$(EXEFILE) mclass$(EXEFILE) mitems$(EXEFILE) \
-	mspells$(EXEFILE)
+devkit: $(DEVKIT_BINARIES)
 
 .PHONY: data
-ifndef WIN
 data: $(DATA_DIR)/clans.pak
-endif
+
+.PHONY: installer
+installer: $(DOOR_BINARIES) data native-chew$(NATIVEEXEFILE) install$(EXEFILE)
+	mkdir ../stage
+	mkdir ../stage/gum
+	cp ../release/* ../stage/gum
+	cp $(DATA_DIR)/clans.pak ../stage/gum
+	cp $(DOOR_BINARIES) ../stage/gum
+	cd ../stage/gum && ls -1 > ../files.lst
+	cd ../stage/gum && ../../src/native-chew$(NATIVEEXEFILE) ../clans.gum ../files.lst
+	rm -rf ../stage/gum
+	rm -f ../stage/files.lst
+	rm -f ../stage/UnixAttr.DAT
+	cp ../installer/* ../stage
+	cp install$(EXEFILE) ../stage
+	zip -j Clans-$(os)-$(MACH)-0_97b1.zip ../stage/*
 
 clean:
 	$(DELETE) *.o
@@ -113,6 +142,7 @@ clean:
 	$(DELETE) mclass$(EXEFILE)
 	$(DELETE) mitems$(EXEFILE)
 	$(DELETE) mspells$(EXEFILE)
+	$(DELETE) native-*
 	$(DELETE) reset$(EXEFILE)
 	$(DELETE) pcedit$(EXEFILE)
 	$(DELETE) $(DATA_DIR)/church.e
@@ -131,18 +161,20 @@ clean:
 	$(DELETE) $(DATA_DIR)/secret.e
 	$(DELETE) $(DATA_DIR)/spells.dat
 	$(DELETE) $(DATA_DIR)/strings.xl
+	$(DELETEDIR) ../stage
+	$(DELETE) Clans-*.zip
 
 clans$(EXEFILE):      $(OBJS) unix_wrappers.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJS) unix_wrappers.o -o clans$(EXEFILE) $(LIBS)
 
-%.e: %.evt ecomp$(EXEFILE)
-	./ecomp$(EXEFILE) $< $@
+%.e: %.evt native-ecomp$(NATIVEEXEFILE)
+	./native-ecomp$(NATIVEEXEFILE) $< $@
 
-%.q: %.txt ecomp$(EXEFILE)
-	./ecomp$(EXEFILE) $< $@
+%.q: %.txt native-ecomp$(NATIVEEXEFILE)
+	./native-ecomp$(NATIVEEXEFILE) $< $@
 
-%.xl: %.txt langcomp$(EXEFILE)
-	./langcomp$(EXEFILE) $<
+%.xl: %.txt native-langcomp$(NATIVEEXEFILE)
+	./native-langcomp$(NATIVEEXEFILE) $<
 
 %.o: %.c %.h
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -150,11 +182,29 @@ clans$(EXEFILE):      $(OBJS) unix_wrappers.o
 chew$(EXEFILE):      chew.c
 	$(CC) $(CFLAGS) $(LDFLAGS) chew.c -o $@
 
+native-chew$(NATIVEEXEFILE):      chew.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) chew.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
+
+.PHONY: native-exefile
+native-exefile:
+	@echo NATIVE EXEFILE: $(EXEFILE)
+
 config$(EXEFILE):      config.c parsing.o unix_wrappers.o
 	$(CC) $(CFLAGS) $(LDFLAGS) config.c parsing.o unix_wrappers.o -o $@ $(CONSOLE_LIBS)
 
 ecomp$(EXEFILE):      ecomp.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) ecomp.c serialize.o crc.o -o $@
+
+native-ecomp$(NATIVEEXEFILE):      ecomp.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) ecomp.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
 
 install$(EXEFILE):      install.c
 	$(CC) $(CFLAGS) $(LDFLAGS) install.c -o $@ $(CONSOLE_LIBS)
@@ -162,52 +212,101 @@ install$(EXEFILE):      install.c
 langcomp$(EXEFILE):      langcomp.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) langcomp.c serialize.o crc.o -o $@
 
+native-langcomp$(NATIVEEXEFILE):      langcomp.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) langcomp.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
+
 reset$(EXEFILE): reset.c myopen.h parsing.h crc.h structs.h k_config.h unix_wrappers.o serialize.o deserialize.o
 	$(CC) $(CFLAGS) $(LDFLAGS) reset.c myopen.o parsing.o crc.o unix_wrappers.o serialize.o deserialize.o -o $@ $(CONSOLE_LIBS)
 
 makenpc$(EXEFILE):      makenpc.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) makenpc.c serialize.o crc.o -o $@
 
+native-makenpc$(NATIVEEXEFILE):      makenpc.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) makenpc.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
+
 makepak$(EXEFILE):      makepak.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) makepak.c serialize.o crc.o -o $@
+
+native-makepak$(NATIVEEXEFILE):      makepak.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) makepak.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
 
 mcomp$(EXEFILE):      mcomp.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) mcomp.c serialize.o crc.o -o $@
 
+native-mcomp$(NATIVEEXEFILE):      mcomp.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) mcomp.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
+
 mclass$(EXEFILE):      mclass.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) mclass.c serialize.o crc.o -o $@
+
+native-mclass$(NATIVEEXEFILE):      mclass.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) mclass.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
 
 mitems$(EXEFILE):      mitems.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) mitems.c serialize.o crc.o -o $@
 
+native-mitems$(NATIVEEXEFILE):      mitems.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) mitems.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
+
 mspells$(EXEFILE):      mspells.c serialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) mspells.c serialize.o crc.o -o $@
+
+native-mspells$(NATIVEEXEFILE):      mspells.c serialize.c crc.c
+ifdef NATIVE
+	$(CC) $(CFLAGS) $(LDFLAGS) mspells.c serialize.c crc.c -o $@
+else
+	env - PATH="$(PATH)" $(MAKE) NATIVE=1 RELEASE=1 $@
+endif
 
 pcedit$(EXEFILE):      pcedit.c myopen.o unix_wrappers.o myopen.h unix_wrappers.h serialize.o deserialize.o crc.o
 	$(CC) $(CFLAGS) $(LDFLAGS) pcedit.c myopen.o unix_wrappers.o serialize.o deserialize.o crc.o -o $@
 
-$(DATA_DIR)/event.mon: $(DATA_DIR)/eventmon.txt mcomp$(EXEFILE)
-	./mcomp$(EXEFILE) $(DATA_DIR)/eventmon.txt $@
+$(DATA_DIR)/event.mon: $(DATA_DIR)/eventmon.txt native-mcomp$(NATIVEEXEFILE)
+	./native-mcomp$(NATIVEEXEFILE) $(DATA_DIR)/eventmon.txt $@
 
-$(DATA_DIR)/output.mon: $(DATA_DIR)/monsters.txt mcomp$(EXEFILE)
-	./mcomp$(EXEFILE) $(DATA_DIR)/monsters.txt $@
+$(DATA_DIR)/output.mon: $(DATA_DIR)/monsters.txt native-mcomp$(NATIVEEXEFILE)
+	./native-mcomp$(NATIVEEXEFILE) $(DATA_DIR)/monsters.txt $@
 
-$(DATA_DIR)/npc.mon: $(DATA_DIR)/npc-pc.txt mcomp$(EXEFILE)
-	./mcomp$(EXEFILE) $(DATA_DIR)/npc-pc.txt $@
+$(DATA_DIR)/npc.mon: $(DATA_DIR)/npc-pc.txt native-mcomp$(NATIVEEXEFILE)
+	./native-mcomp$(NATIVEEXEFILE) $(DATA_DIR)/npc-pc.txt $@
 
-$(DATA_DIR)/spells.dat: $(DATA_DIR)/spells.txt mspells$(EXEFILE)
-	./mspells$(EXEFILE) $(DATA_DIR)/spells.txt $@
+$(DATA_DIR)/spells.dat: $(DATA_DIR)/spells.txt native-mspells$(NATIVEEXEFILE)
+	./native-mspells$(NATIVEEXEFILE) $(DATA_DIR)/spells.txt $@
 
-$(DATA_DIR)/items.dat: $(DATA_DIR)/items.txt mitems$(EXEFILE)
-	./mitems$(EXEFILE) $(DATA_DIR)/items.txt $@
+$(DATA_DIR)/items.dat: $(DATA_DIR)/items.txt native-mitems$(NATIVEEXEFILE)
+	./native-mitems$(NATIVEEXEFILE) $(DATA_DIR)/items.txt $@
 
 $(DATA_DIR)/classes.dat: $(DATA_DIR)/races.dat
 
-$(DATA_DIR)/races.dat: $(DATA_DIR)/classes.txt $(DATA_DIR)/races.txt mclass$(EXEFILE)
-	cd $(DATA_DIR) && ../src/mclass$(EXEFILE)
+$(DATA_DIR)/races.dat: $(DATA_DIR)/classes.txt $(DATA_DIR)/races.txt native-mclass$(NATIVEEXEFILE)
+	cd $(DATA_DIR) && ../src/native-mclass$(NATIVEEXEFILE)
 
-$(DATA_DIR)/clans.npc: $(DATA_DIR)/npcs.txt makenpc$(EXEFILE)
-	./makenpc$(EXEFILE) $(DATA_DIR)/npcs.txt $@
+$(DATA_DIR)/clans.npc: $(DATA_DIR)/npcs.txt native-makenpc$(NATIVEEXEFILE)
+	./native-makenpc$(NATIVEEXEFILE) $(DATA_DIR)/npcs.txt $@
 
 $(DATA_DIR)/clans.pak: $(DATA_DIR)/menus.hlp $(DATA_DIR)/bulletin.hlp \
 		$(DATA_DIR)/citizen.hlp $(DATA_DIR)/clans.hlp \
@@ -227,5 +326,5 @@ $(DATA_DIR)/clans.pak: $(DATA_DIR)/menus.hlp $(DATA_DIR)/bulletin.hlp \
 		$(DATA_DIR)/classes.dat $(DATA_DIR)/schemes.txt \
 		$(DATA_DIR)/strings.xl $(DATA_DIR)/list.asc \
 		$(DATA_DIR)/pxtit.asc $(DATA_DIR)/pg.asc \
-		$(DATA_DIR)/pxnews.asc makepak$(EXEFILE)
-	cd $(DATA_DIR) && ../src/makepak$(EXEFILE) clans.pak pak.lst
+		$(DATA_DIR)/pxnews.asc native-makepak$(NATIVEEXEFILE)
+	cd $(DATA_DIR) && ../src/native-makepak$(NATIVEEXEFILE) clans.pak pak.lst
