And round it all out with the devkit installer
Note however that the install.ini files are not necessarily correct,
and there's still a fair bit to do before an officialt release,
but at least the foundation has been made now.

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -859,6 +859,7 @@ spec:
     - touch odoors
     - echo -e "\e[0Ksection_end:`date +%s`:extract_depends\r\e[0K"
     - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS installer
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS devkit-installer
   variables:
     GIT_STRATEGY: fetch
   artifacts:
