Lower-case GUM filename

--- a/src/doors/clans-src/installer/install.ini
+++ b/src/doors/clans-src/installer/install.ini
@@ -1,4 +1,4 @@
-!CLANS.GUM
+!clans.gum
 :title
           |01the |09_______  |01 $$$$     |09______    __   _____       _______|01
            ,d$$$$$$$$b, $$$$ ,d$$$$$$$$$b. $$b,$$$$$$$b. ,d$$$$$$$$$b.
